[package]
name = "poolstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.17"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.11.1"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["cors"] }
axum = { version = "0.7.3", features = ["macros"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
serde_json = "1.0.117"
